[package]
name = "scanner-engine"
version = "0.1.0"
edition = "2021"
description = "High-concurrency scanning engine for vulnerability assessment"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
futures = "0.3"
rand = "0.8"
regex = "1"
url = "2"

[profile.release]
opt-level = 3
lto = true
